# remoteTaskWrapper

./: .gitignore  Dockerfile  README.md  client.py  docker-compose.yml  main.py  pyproject.toml  schemas.py
static/: index.html
tests/: conftest.py  test_create_task.py  test_task_log.py  test_task_result.py  test_update_task.py
tests/data/: input.csv  task_params.json  task_result.json  test.sh
